--- a/index.html
+++ b/index.html
@@ -3,9 +3,30 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SleekPost</title>
+  <title>SleekPost - Reddit Post Analyzer & Optimizer</title>
+  <meta name="description"
+    content="Analyze and optimize your Reddit posts for better engagement and visibility. Get suggestions to improve your content and increase your reach." />
+  <meta name="keywords"
+    content="reddit, post analyzer, content optimization, social media, writing tools, reddit tips" />
+  <meta name="author" content="SleekPost" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://sleekpost.com/" />
+  <meta property="og:title" content="SleekPost - Reddit Post Analyzer & Optimizer" />
+  <meta property="og:description"
+    content="Analyze and optimize your Reddit posts for better engagement and visibility. Get suggestions to improve your content." />
+  <meta property="og:image" content="https://sleekpost.com/og-image.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://sleekpost.com/" />
+  <meta property="twitter:title" content="SleekPost - Reddit Post Analyzer & Optimizer" />
+  <meta property="twitter:description"
+    content="Analyze and optimize your Reddit posts for better engagement and visibility. Get suggestions to improve your content." />
+  <meta property="twitter:image" content="https://sleekpost.com/og-image.png" />
 
   <!--Favicon-->
   <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
@@ -14,7 +35,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
   <meta name="apple-mobile-web-app-title" content="SleekPost" />
   <link rel="manifest" href="/site.webmanifest" />
-  
+
 </head>
 
 <body>
